A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 216:
----------------
* The LOGFONT struct implementation (win32util) was extended to support the
  full LOGFONT struct as published by Microsoft.  This includes changes to
  win32util.LogFontToDict and win32util.DictToLogFont.  (Feature request
  3433757 by Kris Hardy)

* Remove some duplicated menu code from pythonwin which should avoid
  having py2exe pulling in most of the pythonwin framework in some cases
  (patch 3433527 from kxroberto.)

* A new win32com.client.VARIANT object can be used for advanced control over
  the parameter types passed to some COM methods.  See the documentation in
  win32com/HTML/variant.html (also included in the help file)

* The win32com.adsi and win32com.mapi packages have been upgraded to work on
  Python 3.x and as a result, there is a slight risk that regressions to
  these packages have been introduced in the Python 2.x versions.  Please
  file a bug if any problems are found.

* Pythonwin now warns, but allows you to continue, when saving a file with
  an invalid encoding line (bug 3139486)

* Fix win32com.client.WithEvents on py3k (bug 3199843)

* When passing integers/unsigned integers to COM objects which did not fit 
  into 32bits, OverflowErrors were silently discarded and -1 was silently 
  passed.  This has been fixed for signed integers (an OverflowError is now 
  raised) and unsigned integers now allow for values with the high-bit set to 
  be passed correctly.

* Fix win32com.client.WithEvents() on py3k.

* makepy may have generated syntax errors if 'helpstring' elements in typelibs
  had strange quoting or slashes (bug 3199631)

* Fixed that in some cases win32file.GetOpenFileName and GetSaveFileName 
  could have returned trailing garbage after an embedded NULL character.
  (bug 3277647)
